buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
        classpath 'com.gradleup.shadow:shadow-gradle-plugin:8.3+'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

apply plugin: 'org.spongepowered.mixin'
apply plugin: 'com.gradleup.shadow'

version = "${project.minecraft_version}-${project.mod_version}-forge"
group = mod_group_id

repositories {
    maven {
        url "https://cursemaven.com"
    }
    mavenLocal()
}

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(8)
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'


            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')

            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"

    config "${mod_id}.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    minecraftLibrary('io.github.archipelagomw:Java-Client:0.2.1') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }

    shadow ('io.github.archipelagomw:Java-Client:[0.2.1]') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }

    implementation fg.deobf("curse.maven:ftb-quests-forge-289412:${ftb_quests_version}")
    implementation fg.deobf("curse.maven:ftb-library-forge-404465:3553840")
    implementation fg.deobf("curse.maven:ftb-teams-forge-404468:3535953")
    implementation fg.deobf("curse.maven:architectury-api-419699:4521290")
    implementation fg.deobf("curse.maven:item-filters-309674:3376819")
}

shadowJar {
    project.configurations.shadow.setTransitive(true);
    configurations = [project.configurations.shadow]
    relocate("org.slf4j", "shadow.archipelago.org.slf4j")
    relocate("org.publicsuffix.list", "shadow.archipelago.org.publicsuffix.list")
    relocate("org.java_websocket", "shadow.archipelago.org.java_websocket")
    relocate("org.apache.hc", "shadow.archipelago.org.apache.hc")
    relocate("io.github.archipelagomw", "shadow.archipelago.io.github.archipelagomw")
    exclude 'META-INF/versions/**'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             forge_version          : forge_version,
                             forge_version_range    : forge_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description,
                             ftb_quests_version     : ftb_quests_version]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes(["Specification-Title"     : mod_id,
                    "Specification-Vendor"    : mod_authors,
                    "Specification-Version"   : "1",
                    "Implementation-Title"    : project.name,
                    "Implementation-Version"  : project.jar.archiveVersion,
                    "Implementation-Vendor"   : mod_authors,
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")])
    }

    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

reobf {
    shadowJar {}
}

build.dependsOn reobfShadowJar